--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -67,9 +67,12 @@
         "\n",
         "# Add a new student\n",
         "students.append(\"Hina\")\n",
-        "\n",
+        "students.append(\"Shreyas\")\n",
+        "students.append(\"Nuthan\")\n",
+        "students.append(\"Rakesh\")\n",
+        "students.append(\"Dharmik\")\n",
         "# Search for a student\n",
-        "search_name = \"Zaid\"\n",
+        "search_name = \"Shreyas\"\n",
         "if search_name in students:\n",
         "    print(f\"{search_name} found at index {students.index(search_name)}\")\n",
         "else:\n",
@@ -83,16 +86,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8gVzbb-MG0Su",
-        "outputId": "1a6b998f-803a-4635-89b8-eb4c2b0867ed"
+        "outputId": "0d273981-cc60-41fb-c7a1-8cf8c2ba7aa1"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Zaid found at index 2\n",
-            "📋 Student List: ['Ali', 'Sara', 'Zaid', 'Hina']\n"
+            "Shreyas found at index 4\n",
+            "📋 Student List: ['Ali', 'Sara', 'Zaid', 'Hina', 'Shreyas', 'Nuthan', 'Rakesh', 'Dharmik']\n"
           ]
         }
       ]
