--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -47,11 +47,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "wrONv57JyhIE"
+        "id": "wrONv57JyhIE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a00cb4c-11b1-4a4c-bc10-0130274cebbb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stack (Top to Bottom): [30, 20, 10]\n",
+            "Top Element: 30\n",
+            "Found 20 at position 1 from top\n",
+            "Popped: 30\n",
+            "Stack (Top to Bottom): [20, 10]\n",
+            "Stack (Top to Bottom): [50, 6, 22, 20, 10]\n",
+            "Top Element: 50\n",
+            "Found 50 at position 4 from top\n",
+            "Popped: 50\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# ✅ Python Implementation of Stack using List (Array)\n",
@@ -94,7 +114,14 @@
         "peek()\n",
         "search(20)\n",
         "pop()\n",
-        "traverse()"
+        "traverse()\n",
+        "push(22)\n",
+        "push(6)\n",
+        "push(50)\n",
+        "traverse()\n",
+        "peek()\n",
+        "search(50)\n",
+        "pop()"
       ]
     },
     {
